design bugfix: password field was too big on small screens

--- a/src/scss/coinglacier.org.scss
+++ b/src/scss/coinglacier.org.scss
@@ -148,6 +148,7 @@ span#hidePass{
 }
 input#password{
     width: 11rem;
+    flex: none;
 }
 
 #address-numbering .form-check, #show-xpub .form-check{
